GF-43098 defect fixed Off-Centered Text in DataGridListSelection.js
Issue: ListActions.DataGridListSelection: Off-Centered Text on Minwidth
True Buttons
Fixes: Added text align : center to override the moon-header-client
child behaviour

Enyo-DCO-1.1-Signed-off-by: Rajyavardhan P <rajyavardhan.p@lge.com>

--- a/css/Header.less
+++ b/css/Header.less
@@ -74,6 +74,9 @@
 	text-align: left;	/* fallback in case text-align:start isn't supported */
 	text-align: start;	/* CSS3 for RTL support */
 }
+.moon-header-client > .moon-button {
+  text-align: center;	/* Overrides the text-align property  for button */
+}
 
 
 /* Small Header */
